--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   <hr class="solid">
   <!--Categories-->
   <div class="container">
-    <div class="row row-cols-4">
+    <div class="row justify-content-md-center">
       <div class="col"><h6><a href="https://www.youtube.com/watch?v=gipryIrI66o">CASUAIS</a></h6></div>
       <div class="col"><h6>FORMAIS</h6></div>
       <div class="col"><h6>TEMÁTICAS</h6></div>
@@ -26,9 +26,26 @@
   </div>
   <!--Divider-->
   <hr class="solid">
+  <!--Banner-->
   <div class="container">
-    <div class="row">
-      <div class="col-sm-4" style="height: 600px; width: 350px; background-color: black"></div>
+  <div class="row">
+    <div class="col-md-1" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+      </div>
+  <!--Dresses00_01_02-->
+
+      <div class="col" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+      </div>
+      <div class="col" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+      </div>
+      <div class="col" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+      </div>
+    </div>
+
+
   <!--Divider-->
   <hr class="solid">
   <!--Footer-->
