--- a/home.html
+++ b/home.html
@@ -10,9 +10,25 @@
         <link rel="stylesheet" href="CSS/style.css">
     </head>
 <body>
-  <!--Logo and sub title-->
-  <p style="text-align: center;"><img src="Images/LogoMain.png" alt="RHB Logo" width="512" height="256"></p>
-  <h3 style="text-align: center;">ORIGINAL BEAUTY</h3>
+  <!--Social Media-->
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="Images/Twitterlogo.png" style="height: 64px; width: 64px;"class="img-responsive"></a>
+        <img src="Images/TikTokLogo.png" style="height: 64px; width: 64px;"class="img-responsive"></a>
+        <img src="Images/InstagramLogo.png" style="height: 64px; width: 64px;"class="img-responsive"></a>
+      </div>
+      <!--Logo and Sub title-->
+      <div class="col-6">
+        <p style="text-align: center;"><img src="Images/LogoMain.png" alt="RHB Logo" width="512" height="256"></p>
+        <h3 style="text-align: center;">ORIGINAL BEAUTY</h3>
+      </div>
+      <!--Sign In/Sign Up-->
+      <div class="col">
+        <h5><a href="https://www.youtube.com/watch?v=gipryIrI66o">Entrar</a>
+        <a href="https://www.youtube.com/watch?v=gipryIrI66o">Cadastre-se</a></h5>
+      </div>
+    </div>
   <!--Divider-->
   <hr class="solid">
   <!--Categories-->
@@ -26,32 +42,47 @@
   </div>
   <!--Divider-->
   <hr class="solid">
-  <!--Banner-->
+  <!--Summer Sale Banner-->
   <div class="container">
   <div class="row">
-    <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+    <div class="col" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/SummerSaleBanner.png" class="img-responsive"></a>
       </div>
   <!--Dresses00_01_02-->
-
-      <div class="col" style="height: 600px; width: 300px;">
+      <div class="col-md-1" style="height: 600px; width: 300px;">
         <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
       </div>
-      <div class="col" style="height: 600px; width: 300px;">
-        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+      <div class="col-md-1" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress01.png" class="img-responsive"></a>
       </div>
-      <div class="col" style="height: 600px; width: 300px;">
-        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+      <div class="col-md-1" style="height: 600px; width: 300px;">
+        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress02.png" class="img-responsive"></a>
       </div>
     </div>
-
-
+  </div>
+  <!--Judy Banner-->
+  <div class="container">
+    <div class="row">
+      <div class="col" style="height: 600px; width: 300px;">
+          <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/JudyBanner.png" class="img-responsive"></a>
+        </div>
+  <!--Dresses03_04_05-->
+  <div class="col-md-1" style="height: 600px; width: 300px;">
+    <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress03.png" class="img-responsive"></a>
+  </div>
+  <div class="col-md-1" style="height: 600px; width: 300px;">
+    <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress04.png" class="img-responsive"></a>
+  </div>
+  <div class="col-md-1" style="height: 600px; width: 300px;">
+    <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress05.png" class="img-responsive"></a>
+  </div>
+  </div>
   <!--Divider-->
   <hr class="solid">
   <!--Footer-->
   <ul>
     <h5>Contato</h5>
-    <h5>Política de privdade</h5>
+    <h5>Política de privacidade</h5>
     <h5>Sobre</h5>
     <h5>Trabalhe conosco</h5>
     <h5>Trocas e Devoluções</h5>
