--- a/dress00page.html
+++ b/dress00page.html
@@ -42,40 +42,53 @@
   </div>
   <!--Divider-->
   <hr class="solid">
+  <!--Test-->
   <!--Summer Sale Banner-->
-  <div class="container">
-  <div class="row">
-    <div class="col" style="height: 600px; width: 300px;">
-        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/SummerSaleBanner.png" class="img-responsive"></a>
-      </div>
-  <!--Dresses00_01_02-->
-      <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="dress00page.html" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
-      </div>
-      <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress01.png" class="img-responsive"></a>
-      </div>
-      <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress02.png" class="img-responsive"></a>
-      </div>
-    </div>
-  </div>
-  <!--Judy Banner-->
   <div class="container">
     <div class="row">
       <div class="col" style="height: 600px; width: 300px;">
-          <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/JudyBanner.png" class="img-responsive"></a>
+          <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
         </div>
-  <!--Dresses03_04_05-->
-  <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress03.png" class="img-responsive"></a>
+    <!--Dresses00_01_02-->
+    <div class="col">
+      <div class="row">
+        <div class="col-md-6">
+        <h6>Preço: R$100,00</h6><br><h5>COMPRAR</h5></div>
+        <!--Divider-->
+        <hr class="solid">
+        <h6>Nome: "Creme de la Creme"</h6><br><h5>Cores:</h5><br><h5>Tamanho: Blá blá blá</h5><br><h5>Código: S1FVD3M0</h5></div>
+        <!--Divider-->
+        <hr class="solid">
+      <div class="row">
+        <div class="col-md-8"><h6>Descrição:</h6><br><h5>BLÁBLÁBLÁ</h5></div>
+      </div>
+    </div>
   </div>
-  <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress04.png" class="img-responsive"></a>
-  </div>
-  <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="https://www.youtube.com/watch?v=xymM0Vw3z_g" title=""><img src="Images/Dress05.png" class="img-responsive"></a>
-  </div>
+  <!--Divider-->
+  <hr class="solid">
+  <!--Comments-->
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col col-lg-2">
+      </div>
+      <div class="col-md-auto">
+        <h6>COMENTÁRIOS</h6>
+      </div>
+      <div class="col col-lg-2">
+      </div>
+    </div>
+    <div class="container">
+      <div class="col">
+        <img src="Images/UserIcon.png" style="height: 64px; width: 64px;"class="img-responsive">
+        <h5>diz: Uma bosta</h5>
+        <img src="Images/UserIcon.png" style="height: 64px; width: 64px;"class="img-responsive">
+        <h5>diz: Muito bom</h5>
+        <img src="Images/UserIcon.png" style="height: 64px; width: 64px;"class="img-responsive">
+        <h5>diz: Costura magnifica!</h5>
+        <img src="Images/UserIcon.png" style="height: 64px; width: 64px;"class="img-responsive">
+        <h5>diz: Tem mais cores?</h5>
+      </div>
+    </div>
   </div>
   <!--Divider-->
   <hr class="solid">
