--- a/omega.html
+++ b/omega.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <!--Site Name-->
-        <title>Red Hot Beauty - Original Beauty</title>
+        <title>Red Hot Beauty - Ômega</title>
         <!--Bootstrap and CSS settings-->
         <link rel="stylesheet" type="text/css" href="Bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="CSS/style.css">
@@ -31,7 +31,6 @@
   <!--Divider-->
   <hr class="solid">
   <!--Categories-->
-  <div class="container">
   <div class="row">
     <div class="col">
       <a href="casuals.html" title=""><h6 class="text-center">CASUAIS</h6></a>
@@ -42,11 +41,7 @@
     <div class="col">
       <a href="cosplay.html" title=""><h6 class="text-center">TEMÁTICAS</h6></a>
     </div>
-    <div class="col">
-      <a href="omega.html" title=""><h6 class="text-center">ÔMEGA</h6></a>
-    </div>
   </div>
-</div>
   <!--Divider-->
   <hr class="solid">
   <!--Summer Sale Banner-->
