--- a/cosplay.html
+++ b/cosplay.html
@@ -25,8 +25,8 @@
       </div>
       <!--Sign In/Sign Up-->
       <div class="col">
-        <h5><a href="https://www.youtube.com/watch?v=gipryIrI66o">Entrar</a>
-        <a href="https://www.youtube.com/watch?v=gipryIrI66o">Cadastre-se</a></h5>
+        <h5><a href="signin.html">Entrar</a>
+        <a href="signup.html">Cadastre-se</a></h5>
       </div>
   <!--Divider-->
   <hr class="solid">
@@ -54,13 +54,13 @@
       </div>
   <!--Dresses00_01_02-->
       <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="dress00.html" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
+        <a href="dress00.html" title=""><img src="Images/cosplay00.png" class="img-responsive"></a>
       </div>
       <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="dress01.html" title=""><img src="Images/Dress01.png" class="img-responsive"></a>
+        <a href="dress01.html" title=""><img src="Images/cosplay01.png" class="img-responsive"></a>
       </div>
       <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="dress02.html" title=""><img src="Images/Dress02.png" class="img-responsive"></a>
+        <a href="dress02.html" title=""><img src="Images/cosplay02.png" class="img-responsive"></a>
       </div>
     </div>
   </div>
@@ -72,13 +72,13 @@
         </div>
   <!--Dresses03_04_05-->
   <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="dress03.html" title=""><img src="Images/Dress03.png" class="img-responsive"></a>
+    <a href="dress03.html" title=""><img src="Images/cosplay03.png" class="img-responsive"></a>
   </div>
   <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="dress04.html" title=""><img src="Images/Dress04.png" class="img-responsive"></a>
+    <a href="dress04.html" title=""><img src="Images/cosplay04.png" class="img-responsive"></a>
   </div>
   <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="dress05.html" title=""><img src="Images/Dress05.png" class="img-responsive"></a>
+    <a href="dress05.html" title=""><img src="Images/cosplay05.png" class="img-responsive"></a>
   </div>
   </div>
   <!--Divider-->
