--- a/dress00.html
+++ b/dress00.html
@@ -25,8 +25,8 @@
       </div>
       <!--Sign In/Sign Up-->
       <div class="col">
-        <h5><a href="https://www.youtube.com/watch?v=gipryIrI66o">Entrar</a>
-        <a href="https://www.youtube.com/watch?v=gipryIrI66o">Cadastre-se</a></h5>
+        <h5><a href="signin.html">Entrar</a>
+          <a href="signup.html">Cadastre-se</a></h5>
       </div>
   <!--Divider-->
   <hr class="solid">
@@ -34,16 +34,16 @@
   <div class="container">
   <div class="row">
     <div class="col">
-      <h6 class="text-center">CASUAIS</h6>
+      <a href="casuals.html" title=""><h6 class="text-center">CASUAIS</h6></a>
     </div>
     <div class="col">
-      <h6 class="text-center">FORMAIS</h6>
+      <a href="party.html" title=""><h6 class="text-center">FORMAIS</h6></a>
     </div>
     <div class="col">
-      <h6 class="text-center">TEMÁTICAS</h6>
+      <a href="cosplay.html" title=""><h6 class="text-center">TEMÁTICAS</h6></a>
     </div>
     <div class="col">
-      <h6 class="text-center">ÔMEGA</h6>
+      <a href="omega.html" title=""><h6 class="text-center">ÔMEGA</h6></a>
     </div>
   <!--Divider-->
   <hr class="solid">
