--- a/home.html
+++ b/home.html
@@ -19,14 +19,14 @@
         <a href="https://www.youtube.com/watch?v=H7AAmvDxx8A"><img src="Images/InstagramLogo.png" style="height: 32px; width: 32px;"class="img-responsive"></a>
        </div>
       <!--Logo and Sub title-->
-      <div class="col-6">
+      <div class="col">
         <p style="text-align: center;"><a href="home.html"><img src="Images/LogoMain.png" alt="RHB Logo" width="512" height="256"></a></p>
         <h3 style="text-align: center;">ORIGINAL BEAUTY</h3>
       </div>
       <!--Sign In/Sign Up-->
       <div class="col">
-        <h5><a href="https://www.youtube.com/watch?v=gipryIrI66o">Entrar</a>
-        <a href="https://www.youtube.com/watch?v=gipryIrI66o">Cadastre-se</a></h5>
+        <h5><a href="signin.html">Entrar</a>
+        <a href="signup.html">Cadastre-se</a></h5>
       </div>
   <!--Divider-->
   <hr class="solid">
@@ -60,10 +60,10 @@
         <a href="dress00.html" title=""><img src="Images/Dress00.png" class="img-responsive"></a>
       </div>
       <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="dress01.html" title=""><img src="Images/Dress01.png" class="img-responsive"></a>
+        <a href="dress01.html" title=""><img src="Images/casual01.png" class="img-responsive"></a>
       </div>
       <div class="col-md-1" style="height: 600px; width: 300px;">
-        <a href="dress02.html" title=""><img src="Images/Dress02.png" class="img-responsive"></a>
+        <a href="dress02.html" title=""><img src="Images/formal02.png" class="img-responsive"></a>
       </div>
     </div>
   </div>
@@ -75,13 +75,13 @@
         </div>
   <!--Dresses03_04_05-->
   <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="dress03.html" title=""><img src="Images/Dress03.png" class="img-responsive"></a>
+    <a href="dress03.html" title=""><img src="Images/formal03.png" class="img-responsive"></a>
   </div>
   <div class="col-md-1" style="height: 600px; width: 300px;">
     <a href="dress04.html" title=""><img src="Images/Dress04.png" class="img-responsive"></a>
   </div>
   <div class="col-md-1" style="height: 600px; width: 300px;">
-    <a href="dress05.html" title=""><img src="Images/Dress05.png" class="img-responsive"></a>
+    <a href="dress05.html" title=""><img src="Images/casual05.png" class="img-responsive"></a>
   </div>
   </div>
   <!--Divider-->
