--- a/omega.html
+++ b/omega.html
@@ -25,8 +25,8 @@
       </div>
       <!--Sign In/Sign Up-->
       <div class="col">
-        <h5><a href="https://www.youtube.com/watch?v=gipryIrI66o">Entrar</a>
-        <a href="https://www.youtube.com/watch?v=gipryIrI66o">Cadastre-se</a></h5>
+        <h5><a href="signin.html">Entrar</a>
+          <a href="signup.html">Cadastre-se</a></h5>
       </div>
   <!--Divider-->
   <hr class="solid">
