--- a/dress00page.html
+++ b/dress00page.html
@@ -95,10 +95,10 @@
   <!--Footer-->
   <ul>
     <h5>Contato</h5>
-    <h5>Política de privacidade</h5>
-    <h5>Sobre</h5>
+    <a href="https://www.youtube.com/watch?v=oCEZC9w5cMc" title=""><h5>Política de privacidade</h5>
+    <a href="aboutus.html" title=""><h5>Sobre</h5> </a>
     <h5>Trabalhe conosco</h5>
-    <h5>Trocas e Devoluções</h5>
+    <a href="https://www.youtube.com/watch?v=oCEZC9w5cMc" title=""><h5>Trocas e Devoluções</h5> </a>
   </ul>
   </body>
 <script type="text/javascript" src="Bootstrap/js/bootstrap.min.js"></script>
