--- a/aboutus.html
+++ b/aboutus.html
@@ -47,8 +47,8 @@
   <!--Footer-->
   <ul>
     <h5>Contato</h5>
-    <h5>Política de privacidade</h5>
-    <h5>Sobre</h5>
+    <a href="https://www.youtube.com/watch?v=oCEZC9w5cMc" title=""><h5>Política de privacidade</h5>
+    <a href="aboutus.html" title=""><h5>Sobre</h5> </a>
     <h5>Trabalhe conosco</h5>
     <a href="https://www.youtube.com/watch?v=oCEZC9w5cMc" title=""><h5>Trocas e Devoluções</h5> </a>
   </ul>
